# Modern-OpenGL-Bouncing-Ball-Demo

./: .clang-format  .gitmodules  CMakeLists.txt
CMake/: BuildCGLM.cmake  BuildGLEW.cmake  BuildGLFW.cmake
Dependencies/cglm-0.9.1/include/cglm/: types-struct.h
Source/: main.c  utility.c  utility.h
